--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
@@ -44,7 +44,7 @@
             <td class="action-cell">
                 @if(valide)
                 {
-                    <a href='@Url.Action("DeleteConfirmed", new { idProgramme = item.idProgramme })'>
+                    <a href='@Url.Action("Delete", new { idProgramme = item.idProgramme })'>
                         <span class="glyphicon glyphicon-trash"></span>
                     </a>
                 }
