--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/Index.cshtml
@@ -4,26 +4,27 @@
     ViewBag.Title = "Gestion des grilles";
 }
 
+@Html.Action("_TreeView")
 
-<div id="super-view">    
-    @Html.Action("_TreeView")
-    <div id="info-display" class="container-fluid">
-        <div id="info-header">
+<div class="super-view">    
 
-            <h1>Gestion des grilles</h1>
-            <div class="fancy-button edit" onclick="location.href='@Url.Action("Create","grilleCours")'"><span class="glyphicon glyphicon-plus"></span> Ajouter</div>
+    <header class="fat-header">
 
+        <h1>@ViewBag.Title</h1>
 
-            <hr />
-            @foreach (var grille in Model)
-                {
-                <a class="info-child clearfix" href='@Url.Action("Info","grilleCours", new { id=grille.idGrille })'>
-                    <p class="gauche">@Html.DisplayFor(Model => grille.idGrille) -@Html.DisplayFor(model => grille.nom)</p>
-                    <p class="droite">(420-2001-AA)</p>
-                </a>
-            }        
-        </div>
-    </div>
+    </header>
+    
+    <div class="fancy-button edit" onclick="location.href='@Url.Action("Create","grilleCours")'"><span class="glyphicon glyphicon-plus"></span> Ajouter</div>
+
+    <hr />
+    @foreach (var grille in Model)
+        {
+        <a class="info-child clearfix" href='@Url.Action("Info","grilleCours", new { id=grille.idGrille })'>
+            <p class="gauche">@Html.DisplayFor(Model => grille.idGrille) -@Html.DisplayFor(model => grille.nom)</p>
+            <p class="droite">(420-2001-AA)</p>
+        </a>
+    }
+
 </div>
 
 
