--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
@@ -1,55 +1,56 @@
 ﻿@model ApplicationPlanCadre.Models.Programme
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Modification d'un programme";
 }
 
-<div class="container">
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.idProgramme)
 
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        @Html.HiddenFor(model => model.idProgramme)
+    <div class="container">
+        <div class="form-box">
 
-        <div class="form-horizontal form-box single">
+            <header class="light-header">
+
+                <h1>@ViewBag.Title</h1>
+
+            </header>
+
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <h3>Modification d'un programme</h3>
+            
+            @Html.ValidationMessage("Duplique", new { @class = "text-danger" })
+
+            <div class="row">
+                <div class="col-md-6">
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.idDevis)
+                        @Html.DropDownList("idDevis", null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.idDevis, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.nom)
+                        @Html.TextBoxFor(model => model.nom, new { @class = "form-control", @maxlength = 50 })
+                        @Html.ValidationMessageFor(model => model.nom, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.annee)
+                        @Html.TextBoxFor(model => model.annee, new { @class = "form-control small", @maxlength = 4, @onkeydown = "return (!(event.keyCode>=65) && event.keyCode!=32);" })
+                        @Html.ValidationMessageFor(model => model.annee, "", new { @class = "text-danger" })
+                    </div>
+
+                </div>
+            </div>
+
             <hr />
-            <div class="champ">
-                @Html.ValidationMessage("Duplique", new { @class = "text-danger" })
-            </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.idDevis, htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-6">
-                    @Html.DropDownList("idDevis", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.idDevis, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            <input type="submit" value="Confirmer" class="fancy-button" />
+            <a href='@Url.Action("Create")' class="fancy-button rouge">Annuler</a>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.nom, htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-6">
-                    @Html.EditorFor(model => model.nom, new { htmlAttributes = new { @class = "form-control col-md-6", @maxlength = 50 } })
-                    @Html.ValidationMessageFor(model => model.nom, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.annee, htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-6">
-                    @Html.EditorFor(model => model.annee, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 4, @onkeydown = "return (!(event.keyCode>=65) && event.keyCode!=32);" } })
-                    @Html.ValidationMessageFor(model => model.annee, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-3 col-md-9">
-                    <input type="submit" value="Confirmer" class="fancy-button" />
-                    <a href='@Url.Action("Create")' class="fancy-button rouge">Annuler</a>
-                </div>
-            </div>
         </div>
-    }
-
-</div>
+    </div>
+}
