--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
@@ -22,7 +22,7 @@
     @foreach (var item in Model)
     {
         bool valide = item.PlanCadre.Count() == 0;
-        string dblclickEvent = valide ? Url.Action("Edit", new { id = item.idProgramme }) : @Url.Action("Create");
+        string dblclickEvent = valide ? Url.Action("Edit", new { idProgramme = item.idProgramme }) : @Url.Action("Create");
         <tr ondblclick="location.href='@dblclickEvent'">
             <td>
                 @Html.DisplayFor(modelItem => item.nom)
