--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/InfoHeure.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/InfoHeure.cshtml
@@ -1,45 +1,41 @@
 ﻿@model ApplicationPlanCadre.Models.GrilleCours
-
-
-
 @{
+    ViewBag.Title = "Grille de cours : " + Model.nom;
+
     //En attendant de pouvoir récupérer cette liste via une requête ou dans la table. 
     string[] tabSession = { "I", "II", "IIII", "IV", "V", "VI" };
 
     List<String> listeConpetences = new List<string>();
-        
-    var listeCompetences = ViewBag.List;
 
+    var listeCompetences = ViewBag.List;
 }
 
-<div id="super-view">
-    @Html.Action("_TreeView")
+@Html.Action("_TreeView")
 
-    <div id="info-display" class="container-fluid">
-        <div id="info-header">
-            <h3>Grille de cours : @Model.nom</h3>
-        <div>
-            <h1>@ViewBag.nom</h1>
-            @*<div class="fancy-button edit" onclick="location.href='@Url.RouteUrl("Edit-grilleCours",new {id=Model.Id})'"><span class="glyphicon glyphicon-pencil"></span> Modifier</div>*@
-            <div class="fancy-button edit" onclick="location.href='@Url.Action("Edit", "grilleCours", new { id = Model.idGrille })'"><span class="glyphicon glyphicon-pencil"></span> Modifier</div>
-            <div class="fancy-button edit" onclick="location.href='@Url.Action("Delete", "grilleCours", new { id = Model.idGrille })'"><span class="glyphicon glyphicon-trash"></span> Supprimer</div>
-        </div>
-        <hr />
-        <div id="select-grille">
-            <div class="row">
-                <div class="col-sm-4" id="hover-grille" onclick="location.href='@Url.Action("Info", "grilleCours", new { id = Model.idGrille })'"><h3>Structure</h3></div>
-                <div class="col-sm-4" id="selected-grille"><h3>Heure</h3></div>
-                <div class="col-sm-4" id="hover-grille" onclick="location.href='@Url.Action("InfoPrealable", "grilleCours", new { id = Model.idGrille })'"><h3>Préalable</h3></div>
-            </div>
-        </div>
-        <hr />
+<div class="super-view">
+
+    <header class="fat-header">
+
+        <h1>@ViewBag.Title</h1>
+
+    </header>
+            
+    <div>
+        <h1>@ViewBag.nom</h1>
+        @*<div class="fancy-button edit" onclick="location.href='@Url.RouteUrl("Edit-grilleCours",new {id=Model.Id})'"><span class="glyphicon glyphicon-pencil"></span> Modifier</div>*@
+        <div class="fancy-button edit" onclick="location.href='@Url.Action("Edit", "grilleCours", new { id = Model.idGrille })'"><span class="glyphicon glyphicon-pencil"></span> Modifier</div>
+        <div class="fancy-button edit" onclick="location.href='@Url.Action("Delete", "grilleCours", new { id = Model.idGrille })'"><span class="glyphicon glyphicon-trash"></span> Supprimer</div>
     </div>
-        @Html.Action("_Heure")
+    <hr />
+    <div id="select-grille">
+        <div class="row">
+            <div class="col-sm-4" id="hover-grille" onclick="location.href='@Url.Action("Info", "grilleCours", new { id = Model.idGrille })'"><h3>Structure</h3></div>
+            <div class="col-sm-4" id="selected-grille"><h3>Heure</h3></div>
+            <div class="col-sm-4" id="hover-grille" onclick="location.href='@Url.Action("InfoPrealable", "grilleCours", new { id = Model.idGrille })'"><h3>Préalable</h3></div>
+        </div>
     </div>
+    <hr />
+
+    @Html.Action("_Heure")
+
 </div>
- 
-
-
-
-
-
