macro-changement dans grille

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/Info.cshtml
@@ -16,7 +16,7 @@
 
 <div class="super-view">
 
-    <header class="light-header">
+    <header class="fat-header">
 
         <h1>@ViewBag.Title</h1>
 
