span couleur pour recherche changer

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/_afficherRecherche.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/_afficherRecherche.cshtml
@@ -9,7 +9,7 @@
         font-size: 20px;
         font-family: Calibri;
     }
-    span{
+    .ligne{
        color:darkblue;
     }
 </style>
@@ -33,8 +33,8 @@
                 foreach (SearchEnonceCompetence enonceCmpt in Model.EnonceCompetence)
                 {
                     <a class="info-child clearfix" href="@Url.Action("Info","EnonceCompetence", new { idCompetence = enonceCmpt.idCompetence })">
-                        <p><span>Code compétence : </span>@Html.Raw(enonceCmpt.codeCompetence)</p>
-                        <p><span>Description : </span>@Html.Raw(enonceCmpt.description)</p>
+                        <p><span class="ligne">Code compétence : </span>@Html.Raw(enonceCmpt.codeCompetence)</p>
+                        <p><span class="ligne">Description : </span>@Html.Raw(enonceCmpt.description)</p>
                     </a>
                 }
             }
@@ -48,7 +48,7 @@
                     foreach (SearchElementCompetence elementCompt in Model.ElementCompetence)
                     {
                         <a class="info-child clearfix" href="@Url.Action("Info","ElementCompetence", new { idElement = elementCompt.idElement })">
-                            <p><span>Description : </span>@Html.Raw(elementCompt.description)</p>
+                            <p><span class="ligne">Description : </span>@Html.Raw(elementCompt.description)</p>
                         </a>
                     }
                 }
@@ -63,12 +63,12 @@
                     foreach (SearchDevisMinistere devis in Model.DevisMinistere)
                     {
                         <a class="info-child clearfix" href="@Url.Action("Info","DevisMinistere", new { idDevis = devis.idDevis })">
-                            <p><span>Année : </span>@Html.Raw(devis.annee)</p>
-                            <p><span>Code de spécialisation : </span>@Html.Raw(devis.codeSpecialisation)</p>
-                            <p><span>Spécialisation : </span>@Html.Raw(devis.specialisation)</p>
-                            <p><span>Condition : </span>@Html.Raw(devis.condition)</p>
-                            <p><span>Sanction : </span>@Html.Raw(devis.sanction)</p>
-                            <p><span>Code de programme : </span>@Html.Raw(devis.codeProgramme)</p>
+                            <p><span class="ligne">Année : </span>@Html.Raw(devis.annee)</p>
+                            <p><span class="ligne">Code de spécialisation : </span>@Html.Raw(devis.codeSpecialisation)</p>
+                            <p><span class="ligne">Spécialisation : </span>@Html.Raw(devis.specialisation)</p>
+                            <p><span class="ligne">Condition : </span>@Html.Raw(devis.condition)</p>
+                            <p><span class="ligne">Sanction : </span>@Html.Raw(devis.sanction)</p>
+                            <p><span class="ligne">Code de programme : </span>@Html.Raw(devis.codeProgramme)</p>
                         </a>
                     }
                 }
@@ -85,7 +85,7 @@
                     foreach (SearchContexteRealisation contexteReal in Model.ContexteRealisation)
                     {
                         <a class="info-child clearfix" href="@Url.Action("Info","EnonceCompetence", new { idCompetence = contexteReal.idCompetence})">
-                           <p><span>Description : </span>@Html.Raw(contexteReal.description)</p>
+                           <p><span class="ligne">Description : </span>@Html.Raw(contexteReal.description)</p>
                         </a>
                     }
                 }
@@ -100,7 +100,7 @@
                     foreach (SearchCriterePerformance critPerf in Model.CriterePerformance)
                     {
                         <a class="info-child clearfix" href="@Url.Action("Info","ElementCompetence", new { idElement = critPerf.idElement })">
-                            <p><span>Description : </span>@Html.Raw(critPerf.description)</p>
+                            <p><span class="ligne">Description : </span>@Html.Raw(critPerf.description)</p>
                         </a>
                     }
                 }
