--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/_TreeView.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/_TreeView.cshtml
@@ -2,6 +2,7 @@
 
 <div class="tree-view">
 
+    <a href="@Url.Action("Recherche", "Recherche")">LOL SEARCH</a>
     <div class="tree-view-header">Devis ministériels</div>
     @foreach (var devisMinistere in Model.OrderBy(m => m.codeProgramme))
     {
