--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Manage/ChangePassword.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ApplicationPlanCadre.Models.ChangePasswordViewModel
+@using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "Changer le mot de passe";
 }
@@ -41,6 +42,7 @@
 
             <hr />
             <input type="submit" value="Confirmer" class="fancy-button" />
+            <a class="fancy-button rouge" onclick="location.href='@Url.Action("Details", new { userId = User.Identity.GetUserId() })'">Retour</a>
 
         </div>
     </div>
