change de div box

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/Index.cshtml
@@ -24,8 +24,8 @@
 
 <div id="super-view">
     @*@Html.Action("_TreeView")*@
-    <div id="info-display" class="container-fluid">
-        <div id="info-detail">
+    <div class="container">
+        <div class="form-box">
             <h1>Rapport</h1>
             <h2>Plan Cadre</h2>
             <hr />
