--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/_Prealable.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/_Prealable.cshtml
@@ -1,71 +1,72 @@
 ﻿@model ApplicationPlanCadre.Models.GrilleCours
 
+<div class="section-grille">
+    <div class="table-responsive" id="grilleCoursPrealable">
 
-<div class="table-responsive" id="grilleCoursPrealable">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="warning"><b>Préalable absolu</b></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td class="info"><b>Préalable relatif</b></td>
+                </tr>
+                <tr class="danger">
+                    <td colspan="2"><b>Cours</b></td>
+                    <td colspan="2"><b>Préalable</b></td>
+                </tr>
+            </thead>
+            <tbody id="grilleBody" class="grilleBody">
 
-    <table  class="table table-bordered">
-         <thead>
-             <tr>
-                 <td></td>
-                 <td></td>
-                 <td></td>
-                 <td class="warning"><b>Préalable absolu</b></td>
-             </tr>
-             <tr>
-                 <td></td>
-                 <td></td>
-                 <td></td>
-                 <td class="info"><b>Préalable relatif</b></td>
-             </tr>
-             <tr class="danger">
-                 <td colspan="2"><b>Cours</b></td>
-                 <td colspan="2"><b>Préalable</b></td>
-             </tr>
-         </thead>
-         <tbody id="grilleBody" class="grilleBody">
-             
-            @foreach (var cours in Model.Cours)
+                @foreach (var cours in Model.Cours)
             {
                 if (cours.PlanCadre.PlanCadrePrealable.FirstOrDefault() != null)
                 {
-                    <tr class="success"><td>@cours.PlanCadre.numeroCours - @cours.PlanCadre.titreCours</td><td></td></tr>
-                    foreach (var pcp in cours.PlanCadre.PlanCadrePrealable)
-                    {
-                        var status ="";
-                        var nomClasse = "";
-                        if (pcp.idStatus == 1)
+                        <tr class="success"><td>@cours.PlanCadre.numeroCours - @cours.PlanCadre.titreCours</td><td></td></tr>
+                        foreach (var pcp in cours.PlanCadre.PlanCadrePrealable)
                         {
-                            status = pcp.StatusPrealable.status;
-                            nomClasse = "info";
-                        }
-                        else if (pcp.idStatus == 2) {
-                            status = pcp.StatusPrealable.status;
-                            nomClasse = "warning";
-                        }
-
-                        foreach (var cour in Model.Cours)
-                        {
-                            if (cour.PlanCadre.idPlanCadre == @pcp.idPrealable)
+                            var status = "";
+                            var nomClasse = "";
+                            if (pcp.idStatus == 1)
                             {
-                                <tr><td></td><td  class="@nomClasse">@cour.PlanCadre.numeroCours - @cour.PlanCadre.titreCours</td></tr>
+                                status = pcp.StatusPrealable.status;
+                                nomClasse = "info";
                             }
-                        }                                                   
+                            else if (pcp.idStatus == 2)
+                            {
+                                status = pcp.StatusPrealable.status;
+                                nomClasse = "warning";
+                            }
+
+                            foreach (var cour in Model.Cours)
+                            {
+                                if (cour.PlanCadre.idPlanCadre == @pcp.idPrealable)
+                                {
+                                    <tr><td></td><td class="@nomClasse">@cour.PlanCadre.numeroCours - @cour.PlanCadre.titreCours</td></tr>
+                                }
+                            }
+                        }
                     }
                 }
-            }
-            
-         </tbody>
-    </table>
-    <table class="table table-bordered">
-        <thead>
-            <tr class="danger">
-                <td><b>Préalable</b></td>
-                <td><b>Cours</b></td>
-            </tr>
-        </thead>
-        <tbody id="grilleBody" class="grilleBody">
 
-            @foreach (var cours in Model.Cours)
+            </tbody>
+        </table>
+        <table class="table table-bordered">
+            <thead>
+                <tr class="danger">
+                    <td><b>Préalable</b></td>
+                    <td><b>Cours</b></td>
+                </tr>
+            </thead>
+            <tbody id="grilleBody" class="grilleBody">
+
+                @foreach (var cours in Model.Cours)
             {
                 foreach (var pcp in cours.PlanCadre.PlanCadrePrealable)
                 {
@@ -85,16 +86,20 @@
                     {
                         if (cour.idPlanCadre == pcp.idPrealable)
                         {
-                            <tr><td class="@nomClasse">@cour.PlanCadre.numeroCours @cour.PlanCadre.titreCours</td><td class="success">@cours.PlanCadre.numeroCours @pcp.PlanCadre.titreCours</td></tr>
+                                <tr><td class="@nomClasse">@cour.PlanCadre.numeroCours @cour.PlanCadre.titreCours</td><td class="success">@cours.PlanCadre.numeroCours @pcp.PlanCadre.titreCours</td></tr>
+                            }
                         }
                     }
                 }
-            }
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+
+    </div>
+
+
+
 
 </div>
 
-
-
+    
